--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 <body>
   <ul>
-    <li><a href="animation.html?algorithm=bubble_sort&pattern=1">バブルソート 1</a></li>
-    <li><a href="practice.html?algorithm=bubble_sort&pattern=1">バブルソート 2</a></li>
-    <li><a href="practice.html?algorithm=bubble_sort&pattern=2">バブルソート 3</a></li>
-    <li><a href="animation.html?algorithm=selection_sort&pattern=3">選択ソート 1</a></li>
-    <li><a href="practice.html?algorithm=selection_sort&pattern=3">選択ソート 2</a></li>
-    <li><a href="practice.html?algorithm=selection_sort&pattern=4">選択ソート 3</a></li>
+    <li><a href="animation.html?algorithm=bubble_sort&pattern=1">バブルソート 1 (アニメーション)</a></li>
+    <li><a href="practice.html?algorithm=bubble_sort&pattern=1">バブルソート 2 (演習イージー)</a></li>
+    <li><a href="practice.html?algorithm=bubble_sort&pattern=2">バブルソート 3 (演習ハード)</a></li>
+    <li><a href="animation.html?algorithm=selection_sort&pattern=3">選択ソート 1 (アニメーション)</a></li>
+    <li><a href="practice.html?algorithm=selection_sort&pattern=3">選択ソート 2 (演習イージー)</a></li>
+    <li><a href="practice.html?algorithm=selection_sort&pattern=4">選択ソート 3 (演習ハード)</a></li>
   </ul>
 </body>
 
